Working refactor with new paths.

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
 </div>
 
 <div id='div_help' class='jumbotron'>
-  <p>I don't claim to be perfcet. Indead, as a backend-dev this a miracle this is readable! I've made many mistakes along my way. However with each mistake I keep learning and becoming better. I've been very fortunate to be surrounded by so many smart and inspiring people, and had the opportunity to learn from them.<p>
+  <p>I don't claim to be perfect. Indead, as a backend-dev it is a miracle this is readable! I've made many mistakes along my way. However with each mistake I keep learning and becoming better. I've been very fortunate to be surrounded by so many smart and inspiring people, and had the opportunity to learn from them.<p>
   <div id='div_help_logos'>
     <img id='img_help_ubc' href=''>
     <img id='img_help_lendesk' href=''>
@@ -38,9 +38,9 @@
 
 <div id='div_want_more' class='jumbotron'>
   <h2>Want more Grellyd?</h3>
-  <h3>My Software Engineering Resume: <a> id='link_se_resume'</a></h3>
-  <h3>My Outdoorsy Resume: <a> id='link_outdoor_resume'</a></h3>
-  <h3>My Travelling Resume: <a> id='link_travel_resume'</a></h3>
+  <h3><a id='link_se_resume' href='/files/se_resume.pdf'a>My Software Engineering Resume:</a></h3>
+  <h3><a id='link_outdoor_resume' href='/files/od_resume.pdf'>My Outdoorsy Resume:</a></h3>
+  <h3><a id='link_travel_resume' href='/files/tvl_resume.pdf'>My Travelling Resume: </a></h3>
 </div>
 
 
