Updated landing page copy

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,8 +2,16 @@
   <h1>Hi!</h1>
   <h2>I'm Graham L. Brown, software engineer, backpacker, and eternal student.</h2>
   <p>This page is under construction. Please excuse the mess.</p>
+  <p>In the meantime, connect with me:
+  <ul>
+      <li><a href="https://github.com/grellyd">Github</a></li>
+      <li><a href="https://www.linkedin.com/in/grellyd/">LinkedIn</a></li>
+      <li><a href="https://twitter.com/grellyd/">Twitter</a></li>
   <a href=''></a>
 </div>
+
+
+<!--
 
 <div id='div_prof_levels'>
   <img href=''>
@@ -43,4 +51,4 @@
   <h3><a id='link_travel_resume' href='/files/tvl_resume.pdf'>My Travelling Resume: </a></h3>
 </div>
 
-
+-->
