--- a/themes/kubo/layouts/_default/list.html
+++ b/themes/kubo/layouts/_default/list.html
@@ -1,3 +1,4 @@
+{{ define "main" }}
 {{if not .IsHome }}
 <h1>{{ .Title }}</h1>
 {{ end }}
@@ -12,3 +13,5 @@
   </li>
   {{ end }}
 </ul>
+
+{{ end }}
