--- a/themes/kubo/layouts/_default/single.html
+++ b/themes/kubo/layouts/_default/single.html
@@ -1,3 +1,4 @@
+{{ define "main" }}
 <div class="single">
     <h1><span class="single-title">{{ .Title }}</span></h1>
     {{ with .Params.author }}
@@ -12,3 +13,4 @@
 <main>
 {{ .Content}}
 </main>
+{{ end }}
