--- a/themes/kubo/layouts/index.html
+++ b/themes/kubo/layouts/index.html
@@ -1,3 +1,5 @@
+{{ define "main" }}
+
 {{ .Content }}
 
 <h2>New Posts</h2>
@@ -15,12 +17,14 @@
 <h2>Statics</h2>
 
 <ul>
-  {{ range (where .Data.Pages "Section" "==" "static") }}
-  <li>
-    <a href="{{ .URL }}">{{ .Title }}</a>
-  </li>
-  {{ end }}
+    {{ range (where .Data.Pages "Section" "==" "static") }}
+    <li>
+        <a href="{{ .URL }}">{{ .Title }}</a>
+    </li>
+    {{ end }}
 </ul>
+
+
 
 <h2>Printouts</h2>
 <h3>.</h3>
@@ -46,3 +50,5 @@
 
 <h3>.Params</h3>
 {{ printf "%#v" $.Site.Params }}
+
+{{ end }}
