working top and bottom bars

--- a/themes/kubo/layouts/partials/header.html
+++ b/themes/kubo/layouts/partials/header.html
@@ -2,7 +2,12 @@
     <div class="links">
         <ul>
             <li><a href="/">Grellyd</a></li>
-            {{ range (where $.Site.AllPages "Section" "==" "static") }}
+            {{ range (where $.Site.RegularPages "Section" "==" "static") }}
+            <li>
+                <a href="{{ .URL }}">{{ .Title }}</a>
+            </li>
+            {{ end }}
+            {{ range (where $.Site.Sections "Section" "==" "post") }}
             <li>
                 <a href="{{ .URL }}">{{ .Title }}</a>
             </li>
