--- a/public/css/grellyd.css
+++ b/public/css/grellyd.css
@@ -2,6 +2,12 @@
 
 .profile_image {
     border-radius: 10px;
+    max-width: 50%;
+}
+
+img {
+    max-width: 100%;
+    max-height: 100%;
 }
 
 /* Font Awesome Social Links */
