--- a/static/css/grellyd.css
+++ b/static/css/grellyd.css
@@ -1,11 +1,23 @@
 /* This file is for your main application css. */
 
 .profile_image {
-    border-radius: 10px;
+    border-radius: 100px;
     max-width: 50%;
+    float: right;
 }
 
 img {
-    max-width: 100%;
+    max-width: 50%;
     max-height: 100%;
+    border-radius: 100px;
 }
+
+#main {
+}
+
+@media screen and (max-width: 425px) {
+    .profile_image {
+        float: none;
+    }
+}
+
