--- a/public/css/grellyd.css
+++ b/public/css/grellyd.css
@@ -9,7 +9,14 @@
 img {
     max-width: 50%;
     max-height: 100%;
-    border-radius: 100px;
+    border-radius: 10px;
+}
+
+.xmas_image {
+    display: inline;
+    margin-left: auto;
+    margin-right: auto;
+    margin: 10px;
 }
 
 @media screen and (max-width: 700px) {
