--- a/public/css/grellyd.css
+++ b/public/css/grellyd.css
@@ -7,16 +7,24 @@
 }
 
 img {
-    max-width: 50%;
-    max-height: 100%;
+    max-width: 100%;
+    max-height: auto;
+    border-radius: 10px;
+}
+
+video {
+    max-width: 100%;
+    max-height: auto;
+    padding: 10px;
     border-radius: 10px;
 }
 
 .xmas_image {
-    display: inline;
+    height: auto;
+    display: inline-block;
     margin-left: auto;
     margin-right: auto;
-    margin: 10px;
+    padding: 10px;
 }
 
 @media screen and (max-width: 700px) {
