Updated images sizes

--- a/public/css/grellyd.css
+++ b/public/css/grellyd.css
@@ -7,28 +7,37 @@
 }
 
 img {
-    max-width: 100%;
-    max-height: auto;
+    max-height: 100%;
     border-radius: 10px;
 }
 
 video {
-    max-width: 100%;
-    max-height: auto;
+    max-height: 480px;
     padding: 10px;
     border-radius: 10px;
 }
 
 .xmas_image {
-    height: auto;
+    height: 480px;
+    width: auto;
     display: inline-block;
     margin-left: auto;
     margin-right: auto;
     padding: 10px;
 }
 
+.autoplay_mobile {
+    display: none;
+}
+
 @media screen and (max-width: 700px) {
     .profile_image {
         float: none;
+    }
+    .autoplay_desktop {
+        display: none;
+    }
+    .autoplay_mobile {
+        display: inline-block;
     }
 }
