--- a/static/css/grellyd.css
+++ b/static/css/grellyd.css
@@ -8,13 +8,12 @@
 
 img {
     max-height: 100%;
+    max-width: 100%;
     border-radius: 10px;
 }
 
 video {
     max-height: 480px;
-    padding: 10px;
-    border-radius: 10px;
 }
 
 .xmas_image {
@@ -27,7 +26,14 @@ video {
 }
 
 .autoplay_mobile {
+    overflow: hidden;
+    border-radius: 10px;
     display: none;
+}
+
+.autoplay_desktop {
+    overflow: hidden;
+    border-radius: 10px;
 }
 
 @media screen and (max-width: 700px) {
@@ -35,9 +41,13 @@ video {
         float: none;
     }
     .autoplay_desktop {
+        overflow: hidden;
+        border-radius: 10px;
         display: none;
     }
     .autoplay_mobile {
+        overflow: hidden;
+        border-radius: 10px;
         display: inline-block;
     }
 }
