--- a/public/css/grellyd.css
+++ b/public/css/grellyd.css
@@ -7,7 +7,7 @@
 }
 
 img {
-    max-height: 100%;
+    max-height: 480px;
     max-width: 100%;
     border-radius: 10px;
 }
@@ -17,7 +17,9 @@ video {
 }
 
 .xmas_image {
-    height: 480px;
+    max-height: 480px;
+    max-width: auto;
+    height: 100%;
     width: auto;
     display: inline-block;
     margin-left: auto;
