Full blog draft

--- a/public/css/kubo.css
+++ b/public/css/kubo.css
@@ -69,6 +69,11 @@ code {
     white-space: normal;
 }
 
+blockquote {
+    border-left: 4px solid #CCC;
+    padding-left: 8px;
+}
+
 .links {
     margin-top: 0px;
     text-align: center;
