--- a/pages/templates/qrgen.tmpl
+++ b/pages/templates/qrgen.tmpl
@@ -7,7 +7,7 @@
 <ul>
     <li>
       <label for="Link">Link:</label>
-      <input type="text" id="name" name="user_name" />
+      <input type="text" id="link" name="link" />
     </li>
     <li>
       <label for="image">Overlay Image:</label>
