--- a/pages/templates/qrgen.tmpl
+++ b/pages/templates/qrgen.tmpl
@@ -148,7 +148,7 @@
     </div>
 </div>
 
-    <div class="single">
+    <div id="main" class="single">
       <h1><span class="single-title">QR Code Generator</span></h1>
 
       <p>Enter your link below. Press 'Generate', the page will refresh, and you will see your QR code in all it's glory. Right click, save as image.</p>
