--- a/pages/templates/qrcode.tmpl
+++ b/pages/templates/qrcode.tmpl
@@ -153,7 +153,7 @@
 
       Your code:
 
-      <img src="{{ .image }}" width=80% height=80%>
+      <img src="{{ .image }}" class="qrcode">
     </div>
   </body>
 </html>
