--- a/static/css/grellyd.css
+++ b/static/css/grellyd.css
@@ -72,3 +72,14 @@ video {
         display: inline-block;
     }
 }
+
+.qrcode {
+    max-height: 480px;
+    max-width: auto;
+    height: 100%;
+    width: auto;
+    display: inline-block;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 10px;
+}
