--- a/pages/templates/qrcode.tmpl
+++ b/pages/templates/qrcode.tmpl
@@ -155,7 +155,9 @@
 
       <img src="{{ .image }}" class="qrcode">
 
+      <br>
       <a href="{{ .image }}" download="{{ .fileName }}">Download<a/>
+      <button onclick="location.href="/qrgen" type="button">Back</button>
     </div>
   </body>
 </html>
