--- a/pages/templates/qrcode.tmpl
+++ b/pages/templates/qrcode.tmpl
@@ -157,7 +157,7 @@
 
       <br>
       <a href="{{ .image }}" download="{{ .fileName }}">Download<a/>
-      <button onclick="location.href="/qrgen" type="button">Back</button>
+      <button onclick="location.href='/qrgen'" type="button">Back</button>
     </div>
   </body>
 </html>
