--- a/pages/templates/qrgen.tmpl
+++ b/pages/templates/qrgen.tmpl
@@ -154,16 +154,16 @@
       <p>Enter your link below. Press 'Generate', the page will refresh, and you will see your QR code in all it's glory. Right click, save as image.</p>
 
       <form action="/qrcode" method="post">
-      <ul>
-          <li>
+      <ul class="formList">
+          <li class="formList">
             <label for="Link">Link:</label>
             <input type="text" id="link" name="link" />
           </li>
-          <li>
+          <li class="formList">
             <label for="image">Overlay Image:</label>
             <input type="file" id="overlay" name="overlay" accept="image/png, image/jpeg"/>
           </li>
-          <li>
+          <li class="formList">
             <input type="submit" value="Generate">
         </ul>
       </form>
