--- a/static/css/grellyd.css
+++ b/static/css/grellyd.css
@@ -89,8 +89,12 @@ form {
     list-style-type: none;
 }
 
-.formList {
+ul .formList {
     padding: 10px;
     list-style-type: none;
     line-height: normal;
+}
+
+li .formList {
+    margin-top: 10px;
 }
