--- a/pages/templates/qrgen.tmpl
+++ b/pages/templates/qrgen.tmpl
@@ -155,15 +155,15 @@
 
       <form action="/qrcode" method="post">
       <ul class="formList">
-          <li class="formList">
+          <li class="formItem">
             <label for="Link">Link:</label>
             <input type="text" id="link" name="link" />
           </li>
-          <li class="formList">
+          <li class="formItem">
             <label for="image">Overlay Image:</label>
             <input type="file" id="overlay" name="overlay" accept="image/png, image/jpeg"/>
           </li>
-          <li class="formList">
+          <li class="formItem">
             <input type="submit" value="Generate">
         </ul>
       </form>
