--- a/templates/qrcode.tmpl
+++ b/templates/qrcode.tmpl
@@ -160,10 +160,10 @@
       <a/>
       <br>
       <a href="{{ .image }}" download="{{ .fileName }}">
-        <button type="button">Download</button>
+        <button type="button" class="linkButton">Download</button>
       <a/>
       <br>
-      <button onclick="location.href='/qrgen'" type="button">Back</button>
+      <button onclick="location.href='/qrgen'" type="button" class="linkButton">Back</button>
     </div>
   </body>
 </html>
