--- a/templates/qrcode.tmpl
+++ b/templates/qrcode.tmpl
@@ -159,8 +159,8 @@
         <img src="{{ .image }}" class="qrcode">
       <a/>
       <br>
-      <a href="{{ .image }}" download="{{ .fileName }}">
-        <button type="button" class="linkButton">Download</button>
+      <a href="{{ .image }}" download="{{ .fileName }}" class="linkButton">
+        <button type="button" >Download</button>
       <a/>
       <br>
       <button onclick="location.href='/qrgen'" type="button" class="linkButton">Back</button>
