--- a/static/css/grellyd.css
+++ b/static/css/grellyd.css
@@ -104,6 +104,9 @@ li .formItem {
 }
 
 .clickButton {
-    padding: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 5px;
+    margin-right: 5px;
     text-decoration: none;
 }
