--- a/templates/qrcode.tmpl
+++ b/templates/qrcode.tmpl
@@ -73,7 +73,6 @@
             
         
         
-
 <div id="newwriting">
     
     <a href="/writing/">Writing</a>
@@ -81,18 +80,8 @@
     <ul>
         
         <li>
-            <span class="date">2023/08/26</span>
-            <a class="sidenav-link" href="/writing/effective-apologies/">Effective apologies</a>
-        </li>
-        
-        <li>
             <span class="date">2023/07/31</span>
-            <a class="sidenav-link" href="/writing/2023-01-02-threeplusone/">The One plus Three Development Cycle: a six month retrospective</a>
-        </li>
-        
-        <li>
-            <span class="date">2023/02/17</span>
-            <a class="sidenav-link" href="/writing/2023-02-17-advice-for-a-first-year/">Advice for a First Year</a>
+            <a class="sidenav-link" href="/writing/2023-07-31-threeplusone/">The One plus Three Development Cycle: six months in</a>
         </li>
         
         <li>
@@ -102,17 +91,7 @@
         
         <li>
             <span class="date">2023/01/24</span>
-            <a class="sidenav-link" href="/writing/2023-01-24-writing-class/">Principles, Process, and Pleasure of Writing - Class Notes</a>
-        </li>
-        
-        <li>
-            <span class="date">2023/01/24</span>
             <a class="sidenav-link" href="/writing/2023-01-24-reading-log/">Principles, Process, and Pleasure of Writing - Reading Log</a>
-        </li>
-        
-        <li>
-            <span class="date">2023/01/02</span>
-            <a class="sidenav-link" href="/writing/2023-01-30-class/">Principles, Process, and Pleasure of Writing - Class Notes</a>
         </li>
         
         <li>
@@ -123,21 +102,6 @@
         <li>
             <span class="date">2019/03/06</span>
             <a class="sidenav-link" href="/writing/2019_03_06_strings_runes_and_bytes/">Demystifying Go&#39;s Strings, Runes, and Bytes</a>
-        </li>
-        
-        <li>
-            <span class="date">0001/01/01</span>
-            <a class="sidenav-link" href="/writing/bonaire/"></a>
-        </li>
-        
-        <li>
-            <span class="date">0001/01/01</span>
-            <a class="sidenav-link" href="/writing/draft_dive_email/"></a>
-        </li>
-        
-        <li>
-            <span class="date">0001/01/01</span>
-            <a class="sidenav-link" href="/writing/draft_your-first-behavioural-interview/"></a>
         </li>
         
     </ul>
