--- a/templates/qrgen.tmpl
+++ b/templates/qrgen.tmpl
@@ -120,7 +120,7 @@
           <label for="Link">Link:</label>
           <input type="text" id="link" name="link" class="inputBox"/>
           <br>
-          <input type="submit" value="Generate">
+          <input type="submit" value="Generate" class="clickButton">
       </form>
     </div>
   </body>
