--- a/templates/qrcode.tmpl
+++ b/templates/qrcode.tmpl
@@ -117,7 +117,7 @@
 
      <p>Your QR Code to <a  href="{{ .link }}">{{ .link }}</a>.</p>
      <p>This image has a high correction factor, and so ~30% of the image can be covered and it will still work.</p>
-    
+     <p>The QRCode image will remain available on this server for around 24 hours, after which it will be deleted.</p>
 
       <a href="{{ .image }}" download="{{ .fileName }}">
         <img src="{{ .image }}" class="qrcode">
